# make-dot-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.cpp  project.json
example/: build.cpp  project.json
example/src/: main.cpp  print.cppm
src/: main.cpp  module.cppm
src/builder/: Builder.cpp  Builder.cppm  BuilderContext.cpp  BuilderContext.cppm  Exceptions.cppm  ExeBuilder.cpp  ExeBuilder.cppm  Export.cpp  Export.cppm  LibBuilder.cpp  LibBuilder.cppm  ModuleBuilder.cppm  ObjBuilder.cpp  ObjBuilder.cppm  TargetProxy.cppm  Targets.cpp  Targets.cppm  common.cppm  module.cppm
src/compiler/: Clang.cpp  Clang.cppm  Compiler.cpp  Compiler.cppm  module.cppm
src/dll/: api.cppm
src/fileProvider/: FileProvider.cpp  FileProvider.cppm  Glob.cpp  Glob.cppm  module.cppm
src/project/: Project.cpp  Project.cppm  ProjectDesc.cpp  ProjectDesc.cppm  Usage.cpp  Usage.cppm  api.cppm  common.cppm  desc.cppm  module.cppm
src/thread/: DepGraph.cpp  DepGraph.cpp.alg1  DepGraph.cppm  FutureList.cpp  FutureList.cppm  Logger.cpp  Process.cpp  ThreadPool.cpp  ThreadPool.cppm  logger.cppm  module.cppm  process.cpp  process.cppm
src/utils/: alias.hpp  macro.hpp  module.cppm
template/: package.cppm
